actualizar textos a español

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="#home" class="page-scroll">Home</a></li>
-            <li><a href="#about" class="page-scroll">About us</a></li>
-            <li><a href="#love-story" class="page-scroll">Love story</a></li>
-            <li><a href="#gallery" class="page-scroll">Gallery</a></li>
-            <li><a href="#gifts-registry" class="page-scroll">Gifts</a></li>
-            <li><a href="#schedule" class="page-scroll">Schedule</a></li>
-            <li><a href="#location" class="page-scroll">Location</a></li>
+            <li><a href="#home" class="page-scroll">Principal</a></li>
+            <li><a href="#about" class="page-scroll">Acerca de nosotros</a></li>
+            <li><a href="#love-story" class="page-scroll">Historia</a></li>
+            <li><a href="#gallery" class="page-scroll">Galería</a></li>
+            <li><a href="#gifts-registry" class="page-scroll">Regalos</a></li>
+            <li><a href="#schedule" class="page-scroll">Horario</a></li>
+            <li><a href="#location" class="page-scroll">Ubicación</a></li>
           </ul>
         </div>
       </div>
@@ -59,13 +59,13 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
           <ul class="nav navbar-nav">
-            <li><a href="#home" class="page-scroll">Home</a></li>
-            <li><a href="#about" class="page-scroll">About us</a></li>
-            <li><a href="#love-story" class="page-scroll">Love story</a></li>
-            <li><a href="#gallery" class="page-scroll">Gallery</a></li>
-            <li><a href="#gifts-registry" class="page-scroll">Gifts</a></li>
-            <li><a href="#schedule" class="page-scroll">Schedule</a></li>
-            <li><a href="#location" class="page-scroll">Location</a></li>
+            <li><a href="#home" class="page-scroll">Principal</a></li>
+            <li><a href="#about" class="page-scroll">Acerca de nosotros</a></li>
+            <li><a href="#love-story" class="page-scroll">Historia</a></li>
+            <li><a href="#gallery" class="page-scroll">Galería</a></li>
+            <li><a href="#gifts-registry" class="page-scroll">Regalos</a></li>
+            <li><a href="#schedule" class="page-scroll">Horario</a></li>
+            <li><a href="#location" class="page-scroll">Ubicación</a></li>
           </ul>
         </div>
       </div>
@@ -76,7 +76,7 @@
         <div class="row text-center">
           <div class="collage">
             <span>Carmen</span> <span>&</span> <span>Fer</span>
-            <div class="wedding-date">8 Diciembre 2018</div>
+            <div class="wedding-date">8 de diciembre 2018</div>
           </div>
         </div>
       </div>
@@ -130,7 +130,7 @@
       <!-- Love story -->
       <section id="love-story" class="love-story text-center">
       <div>
-        <h2>LOVE ST<img src="img/icon-ring-or.png" alt="ring">RY</h2>
+        <h2>HISTORIA DE AM<img src="img/icon-ring-or.png" alt="ring">R</h2>
         <h3>Cómo decidimos que debemos<br> estar juntos <span>para siempre!</span></h3>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
 
@@ -324,7 +324,7 @@
       <!-- Gallery -->
       <section id="gallery" class="gallery row">
         <div class="wrap">
-          <h2 class="text-center">Gallery</h2>
+          <h2 class="text-center">Galería</h2>
           <div class="devider">
             <img src="img/devider-color.png" alt="devider">
           </div>
@@ -347,7 +347,7 @@
       <!-- Gifts registry -->
       <section id="gifts-registry" class="gifts-registry gr-img-block gr-border-none text-center">
         <div class="container">
-          <h2>Gifts registry</h2>
+          <h2>Regalos</h2>
           <div class="devider">
             <img src="img/devider-color.png" alt="devider">
           </div>
