actualizar links y colores

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="#home" class="page-scroll">Principal</a></li>
-            <li><a href="#about" class="page-scroll">Acerca de nosotros</a></li>
+            <li><a href="#about" class="page-scroll">Carmen y Fer</a></li>
             <li><a href="#love-story" class="page-scroll">Historia</a></li>
-            <li><a href="#gallery" class="page-scroll">Galería</a></li>
+            <li><a href="#gallery" class="page-scroll">Fotos</a></li>
             <li><a href="#gifts-registry" class="page-scroll">Regalos</a></li>
             <li><a href="#schedule" class="page-scroll">Horario</a></li>
             <li><a href="#location" class="page-scroll">Ubicación</a></li>
@@ -129,78 +129,78 @@
       </section>
       <!-- Love story -->
       <section id="love-story" class="love-story text-center">
-      <div>
-        <h2>HISTORIA DE AM<img src="img/icon-ring-or.png" alt="ring">R</h2>
-        <h3>Cómo decidimos que debemos<br> estar juntos <span>para siempre!</span></h3>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
+        <div>
+          <h2>HISTORIA DE AM<img src="img/icon-ring-or.png" alt="ring">R</h2>
+          <h3>Cómo decidimos que debemos<br> estar juntos <span>para siempre!</span></h3>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
 
-        <!-- Timeline block -->
-        <div class="timeline-block timeline-vertical tl-theme-press">
-          <div class="timeline-block_item">
-            <div class="timeline-item-img cd-picture">
-              <img src="img/timeline-icon.png" alt="Picture">
-            </div> <!-- timeline-img -->
-            <div class="timeline-item-content">
-              <h3><a href="#">Title of section 1</a></h3>
-              <div class="timeline-item-date">
-                <span>
-                  06 Jan 2016
-                </span>
-              </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-              <a href="#" class="timeline-item-readmore">Read more</a>
-            </div> <!-- timeline-content -->
-          </div> <!-- timeline-block -->
-          <div class="timeline-block_item">
-            <div class="timeline-item-img cd-picture">
-              <img src="img/timeline-icon.png" alt="Picture">
-            </div> <!-- timeline-img -->
-            <div class="timeline-item-content">
-              <h3><a href="#">Title of section 1</a></h3>
-              <div class="timeline-item-date">
-                <span>
-                  12 Feb 2016
-                </span>
-              </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-              <a href="#" class="timeline-item-readmore">Read more</a>
-            </div> <!-- timeline-content -->
-          </div> <!-- timeline-block -->
-          <div class="timeline-block_item">
-            <div class="timeline-item-img cd-picture">
-              <img src="img/timeline-icon.png" alt="Picture">
-            </div> <!-- timeline-img -->
-            <div class="timeline-item-content">
-              <h3><a href="#">Title of section 1</a></h3>
-              <div class="timeline-item-date">
-                <span>
-                  03 Mar 2016
-                </span>
-              </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-              <a href="#" class="timeline-item-readmore">Read more</a>
-            </div> <!-- timeline-content -->
-          </div> <!-- timeline-block -->
-          <div class="timeline-block_item">
-            <div class="timeline-item-img cd-picture">
-              <img src="img/timeline-icon.png" alt="Picture">
-            </div> <!-- timeline-img -->
-            <div class="timeline-item-content">
-              <h3><a href="#">Title of section 1</a></h3>
-              <div class="timeline-item-date">
-                <span>
-                  23 Apr 2016
-                </span>
-              </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
-              <a href="#" class="timeline-item-readmore">Read more</a>
-            </div> <!-- timeline-content -->
-          </div> <!-- timeline-block -->
-          <span class="line"></span>
-        </div> <!-- /.timeline block -->
-      </div>
-    </section>
-      <!-- Events -->
+          <!-- Timeline block -->
+          <div class="timeline-block timeline-vertical tl-theme-press">
+            <div class="timeline-block_item">
+              <div class="timeline-item-img cd-picture">
+                <img src="img/timeline-icon.png" alt="Picture">
+              </div> <!-- timeline-img -->
+              <div class="timeline-item-content">
+                <h3><a href="#">Title of section 1</a></h3>
+                <div class="timeline-item-date">
+                  <span>
+                    06 Jan 2016
+                  </span>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                <a href="#" class="timeline-item-readmore">Read more</a>
+              </div> <!-- timeline-content -->
+            </div> <!-- timeline-block -->
+            <div class="timeline-block_item">
+              <div class="timeline-item-img cd-picture">
+                <img src="img/timeline-icon.png" alt="Picture">
+              </div> <!-- timeline-img -->
+              <div class="timeline-item-content">
+                <h3><a href="#">Title of section 1</a></h3>
+                <div class="timeline-item-date">
+                  <span>
+                    12 Feb 2016
+                  </span>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                <a href="#" class="timeline-item-readmore">Read more</a>
+              </div> <!-- timeline-content -->
+            </div> <!-- timeline-block -->
+            <div class="timeline-block_item">
+              <div class="timeline-item-img cd-picture">
+                <img src="img/timeline-icon.png" alt="Picture">
+              </div> <!-- timeline-img -->
+              <div class="timeline-item-content">
+                <h3><a href="#">Title of section 1</a></h3>
+                <div class="timeline-item-date">
+                  <span>
+                    03 Mar 2016
+                  </span>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                <a href="#" class="timeline-item-readmore">Read more</a>
+              </div> <!-- timeline-content -->
+            </div> <!-- timeline-block -->
+            <div class="timeline-block_item">
+              <div class="timeline-item-img cd-picture">
+                <img src="img/timeline-icon.png" alt="Picture">
+              </div> <!-- timeline-img -->
+              <div class="timeline-item-content">
+                <h3><a href="#">Title of section 1</a></h3>
+                <div class="timeline-item-date">
+                  <span>
+                    23 Apr 2016
+                  </span>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+                <a href="#" class="timeline-item-readmore">Read more</a>
+              </div> <!-- timeline-content -->
+            </div> <!-- timeline-block -->
+            <span class="line"></span>
+          </div> <!-- /.timeline block -->
+        </div>
+      </section>
+      <!-- Schedule -->
       <section id="schedule" class="events">
         <div class="wrap">
           <h2 class="text-center">Horario de eventos</h2>
