actualizar todo el proyecto

--- a/index.html
+++ b/index.html
@@ -392,12 +392,12 @@
               <input type="text" class="form-control" name="table-number" id="table-number" placeholder="#" disabled>
             </div>
             <div class="form-field col-sm-12 select-wrap">
-              <label for="sel1" class="control-label">Eventos a los que asistiré:</label>
-              <select class="form-control" id="sel1" name="mysel">
+              <label for="events" class="control-label">Eventos a los que asistiré:</label>
+              <select class="form-control" id="events" name="events">
                 <option value="All events">Todo el evento</option>
                 <option value="Ceremony">Sólo Ceremonia</option>
                 <option value="Party">Sólo Fiesta</option>
-                <option value="Ceremony">No Asistiré</option>
+                <option value="None">No Asistiré</option>
               </select>
             </div>
             <div class="col-sm-12 text-center">
