actualizar link de amazon

--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
           <p class="intro-text text-center">Hola, gracias por tomarte tu tiempo en pensar qué nos podrías regalar. Lo hemos hecho más simple para ti y nosotros, por lo que aceptaremos pagos en efectivo y paypal.</p>
           <div class="row indent-bottom">
             <div class="col-xs-12 col-sm-12 indent-bottom-sm">
-              <a href="#">
-                <img src="img/gifts/amazon.png" alt="">
+              <a href="https://www.amazon.com/wedding/share/bodacarmenyfer" target="_blank">
+                <img src="img/gifts/amazon.png" alt="Regalos en Amazon">
               </a>
             </div>
         </div>
