aniadir logo de max

--- a/index.html
+++ b/index.html
@@ -354,6 +354,11 @@
                 <img src="img/gifts/amazon.png" alt="Regalos en Amazon">
               </a>
             </div>
+            <div class="col-xs-12 col-sm-12 indent-bottom-sm">
+              <a href="http://bodas.max.com.gt/RegistryDisplay.cfm?id=38838&cid=1321" target="_blank">
+                <img class="max-distelsa" src="img/gifts/max.png" alt="Regalos en Max">
+              </a>
+            </div>
         </div>
       </section>
       <!-- Form -->
